--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,12 @@
 	<main>
 		<section>
 			<h1>Contact Us</h1>
+			<ul class="contact-list">
+				<li>Phone: <a href="tel:559-123-4567">559-123-4567</a></li>
+				<li>Email: <a href="mailto:info@sjvth.org">info@sjvth.org</a></li>
+				<li><a href="https://www.facebook.com" target="_blank">Facebook</a></li>
+				<li>Listen to our <a href="media/welcome.mp3">welcome message</a></li>
+			</ul>
 		</section>
 		<aside>
 			<h2>Our Mission</h2>
